--- a/styles.css
+++ b/styles.css
@@ -28,4 +28,24 @@ h1 {
     font-size:40px
 }
 p{
-    font-size
+    font-size: 20px
+}
+img {
+height: 200px
+  }
+.categoria-videos {
+   display: flex;
+   overflow-x: auto;
+    
+
+
+
+
+
+
+
+
+
+
+
+
